[tool.poetry]
name = "rag-multiqueryretrieval"
version = "0.1.0"
description = "Creating RAG with multiquery retrieval mechanism."
authors = ["Martyniqo <rachanczykmartyna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
pypdfium2 = "^4.30.0"
langchain-community = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
